--- a/demo/table/src/components/DataGrid/src/style/virtual.scss
+++ b/demo/table/src/components/DataGrid/src/style/virtual.scss
@@ -1,7 +1,7 @@
-.f-scroll-panel {
-    pointer-events: none;
+.f-virtual-panel {
     position: absolute;
     top: 0;
     left: 0;
     right: 0;
+    pointer-events: none;
 }
