--- a/demo/table/src/components/DataGrid/src/style/index.scss
+++ b/demo/table/src/components/DataGrid/src/style/index.scss
@@ -1,2 +1,16 @@
-@import "./virtual.scss";
-@import "./grid.scss";
+.f-virtual-panel {
+    position: absolute;
+    top: 0;
+    left: 0;
+    right: 0;
+    pointer-events: none;
+}
+
+.f-data-grid {
+    position: absolute;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    border: 1px solid red;
+}
