--- a/ui/vue/src/table/styles/index.scss
+++ b/ui/vue/src/table/styles/index.scss
@@ -14,6 +14,7 @@
             display: inline-block;
             min-height: 60px;
             min-width: 60px;
+            padding: 10px;
         }
     }
 }
